--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "kotiki-forever",
   "version": "0.1.0",
   "private": true,
+  "homepage": "https://AhmedLamkov.github.io/frontend-challenge",
   "dependencies": {
     "@testing-library/jest-dom": "^5.16.4",
     "@testing-library/react": "^13.2.0",
